--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,8 @@
   <body>
     <h1>Hola bitches</h1>
     <button id="test">Emit to socket</button>
-    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/js/libs/surge-client.js"></script>
+    <script src="/dist/js/surge-client.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
