client reconnecting handling , buffer introduced to surge minor fixes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,13 @@
       <button type="submit">leave room</button>
     </form>
 
+    <form id="emitChannel">
+      <input type="text" id="i2" placeholder="event channel">
+      <input type="text" id="i1" placeholder="event name">
+      <input type="text" id="i3" placeholder="event text">
+      <button type="submit">emit to room</button>
+    </form>
+
     <h3>Room im in : <span id="rooms"></span></h3>
     <h3>Socket state is : <span id="state"></span></h3>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
