switched automation to npm scripts, changed the file structure a little

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Surge | Usage data</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/dist/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -88,6 +88,6 @@
     	</div>
     </section>
     <div class="graph__tooltip"></div>
-    <script src="/dist/bundle.js"></script>
+    <script src="/js/bundle.js"></script>
   </body>
 </html>
