exported graph to a module for easier approach and changes in the future, added mongoDB to save all inbound and outbound messages, many more changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -45,6 +45,7 @@
           from
           <div class="selectbox">
             <select>
+              <option value="all">All Channels</option>
               <option value="channel1">Channel 1</option>
               <option value="channel2">Channel 2</option>
             </select>
